# vecdex

./: .codacy.yml  .env.example  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .testcoverage.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.goreleaser  README.md  client.go  client_test.go  collections.go  converters_test.go  docker-compose.yml  documents.go  go.mod  go.sum  index.go  index_test.go  justfile  options.go  schema.go  search.go  search_builder.go
.claude/: review-rules.md
.github/workflows/: claude-review.yml  fsqr.yml  release.yml  tests.yml
api/: oapi-codegen.yaml  openapi.yaml
benchmarks/scifact/: README.md  compare_groups.py  requirements.txt  run.py
cmd/vecdex/: main.go
config/: dev.yaml  docker-onnx.yaml  docker.yaml  e2e.yaml  local.yaml.example  prod.yaml.example
docs/: valkey-search.md
examples/fsqr/: Dockerfile  embedder.go  main.go
examples/geo/: main.go
examples/months/: main.go
experiments/: scifact-chunking.md
internal/config/: config.go  config_test.go
tests/: Dockerfile.pytest  conftest.py  docker-compose.yml  pyproject.toml  test_01_health.py  test_02_auth.py  test_03_tracing.py  test_04_collections.py  test_05_documents.py  test_06_search.py  test_07_filters.py  test_08_batch.py  test_09_usage.py  test_10_rate_limiting.py  test_11_error_contract.py  test_12_e2e_flows.py  test_13_concurrent.py  test_14_data_integrity.py  test_15_geo.py  test_16_similar.py  test_17_chunked_ingest.py
tests/mock_embedder/: Dockerfile  server.py  server_stdlib.py
tests/testdata/: paphos_places.jsonl
(+152 files in other folders)
