[project]
name = "vecna-e2e-tests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "pytest-html>=4.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "p0: release blocker tests",
    "p1: important edge cases",
    "p2: stress and exotic edge cases",
]
testpaths = ["."]
